--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                <div class="modal-employee-details-container">
                     <img id="modal-employee-image" class="employee-image modal-employee-image" src=""/>
 
-                   <div class="modal-info-container">
+                   <div>
                        <p class="modal-name"></p>
                        <p class="modal-email"></p>
                        <p class="modal-location"></p>
@@ -34,7 +34,7 @@
 
                 <div class="seprator"></div>
 
-                <div class="modal-additional-info-container">
+                <div>
                     <p class="modal-phone"></p>
                     <p class="modal-address"></p>
                     <p class="modal-dob"></p>
